k8s-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookingservice
spec:
  selector:
    app: booking
  ports:
  - port: 3003
    targetPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: eventservice
spec:
  selector:
    app: eventservice
  ports:
  - port: 3001
    targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: mockpaymentservice
spec:
  selector:
    app: mockpaymentservice
  ports:
  - port: 3002
    targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
